crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__thread_report_synthetic_event.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history.into_inner()
---
[
  {
    "kind": "user",
    "content": {
      "type": "text",
      "text": "subscribe"
    }
  },
  {
    "kind": "tool_call",
    "call": {
      "id": "tc-sub",
      "function": {
        "name": "subscribe_tool",
        "arguments": {
          "topic": "events"
        }
      }
    }
  },
  {
    "kind": "tool_result",
    "result": {
      "id": "tc-sub",
      "content": [
        {
          "type": "text",
          "text": "subscribed successfully"
        }
      ]
    }
  },
  {
    "kind": "subscription_event",
    "result": {
      "id": "[uuid]",
      "content": [
        {
          "type": "text",
          "text": "thread report data"
        }
      ]
    },
    "tool_call_id": "tc-sub",
    "child_thread_id": "thread-1",
    "invocation": {
      "id": "[uuid]",
      "function": {
        "name": "receive_event__injected",
        "arguments": {
          "original_args": {
            "topic": "events"
          },
          "original_tool_call_id": "tc-sub",
          "original_tool_name": "subscribe_tool"
        }
      }
    }
  }
]
