crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__tool_result_appended_to_history.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history.into_inner()
---
[
  {
    "kind": "user",
    "content": {
      "type": "text",
      "text": "do something"
    }
  },
  {
    "kind": "tool_call",
    "call": {
      "id": "tc-1",
      "function": {
        "name": "some_tool",
        "arguments": {
          "x": 1
        }
      }
    }
  },
  {
    "kind": "tool_result",
    "result": {
      "id": "tc-1",
      "content": [
        {
          "type": "text",
          "text": "tool output"
        }
      ]
    }
  }
]
