crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__user_message_interrupts_pending_tool_call.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history.into_inner()
---
[
  {
    "kind": "user",
    "content": {
      "type": "text",
      "text": "do something"
    }
  },
  {
    "kind": "tool_call",
    "call": {
      "id": "tc-1",
      "function": {
        "name": "some_tool",
        "arguments": {
          "x": 1
        }
      }
    }
  },
  {
    "kind": "tool_result",
    "result": {
      "id": "tc-1",
      "content": [
        {
          "type": "text",
          "text": "Tool call interrupted by user"
        }
      ]
    }
  },
  {
    "kind": "user",
    "content": {
      "type": "text",
      "text": "actually, never mind"
    }
  }
]
